--- a/extensions/date-picker/locales/en.json
+++ b/extensions/date-picker/locales/en.json
@@ -19,5 +19,31 @@
   "error_network": "Network connection error. Please check your internet connection and try again.",
   "error_timeout": "Request timed out. Please try again in a moment.",
   "error_server": "Server temporarily unavailable. Please try again later.",
-  "error_validation": "Invalid data provided. Please check your selection and try again."
+  "error_validation": "Invalid data provided. Please check your selection and try again.",
+  "stock_check_failed": "Stock check failed. Delivery date will be determined by ERP.",
+  "dutchned_delivery": "Dutchned (Expedition) delivery - Next 14 available dates from API:",
+  "post_delivery": "POST delivery - Standard delivery calendar with mock dates:",
+  "post_delivery_info": "Ordered before 10:00 PM, delivered the next business day",
+  "erp_delivery_info": "Delivery date will be determined by ERP system",
+  "stock_check_loading": "Checking product availability...",
+  "stock_check_out_of_stock": "Some products are out of stock. Delivery date will be determined by ERP.",
+  "weekday_0": "Sunday",
+  "weekday_1": "Monday", 
+  "weekday_2": "Tuesday",
+  "weekday_3": "Wednesday",
+  "weekday_4": "Thursday",
+  "weekday_5": "Friday",
+  "weekday_6": "Saturday",
+  "month_0": "Jan",
+  "month_1": "Feb",
+  "month_2": "Mar",
+  "month_3": "Apr",
+  "month_4": "May",
+  "month_5": "Jun",
+  "month_6": "Jul",
+  "month_7": "Aug",
+  "month_8": "Sep",
+  "month_9": "Oct",
+  "month_10": "Nov",
+  "month_11": "Dec"
 }
