--- a/extensions/date-picker/locales/nl.default.json
+++ b/extensions/date-picker/locales/nl.default.json
@@ -19,5 +19,31 @@
   "error_network": "Netwerkverbindingsfout. Controleer je internetverbinding en probeer opnieuw.",
   "error_timeout": "Verzoek verlopen. Probeer het over een moment opnieuw.",
   "error_server": "Server tijdelijk niet beschikbaar. Probeer het later opnieuw.",
-  "error_validation": "Ongeldige gegevens verstrekt. Controleer je selectie en probeer opnieuw."
+  "error_validation": "Ongeldige gegevens verstrekt. Controleer je selectie en probeer opnieuw.",
+  "stock_check_failed": "Voorraadcontrole mislukt. Bezorgdatum wordt bepaald door ERP.",
+  "dutchned_delivery": "Dutchned (Expeditie) bezorging - Volgende 14 beschikbare datums van API:",
+  "post_delivery": "POST bezorging - Standaard bezorgkalender met testdatums:",
+  "post_delivery_info": "Voor 22.00 besteld, de volgende werkdag in huis",
+  "erp_delivery_info": "Bezorgdatum wordt bepaald door ERP systeem",
+  "stock_check_loading": "Productbeschikbaarheid controleren...",
+  "stock_check_out_of_stock": "Sommige producten zijn niet op voorraad. Bezorgdatum wordt bepaald door ERP.",
+  "weekday_0": "zondag",
+  "weekday_1": "maandag",
+  "weekday_2": "dinsdag",
+  "weekday_3": "woensdag",
+  "weekday_4": "donderdag",
+  "weekday_5": "vrijdag",
+  "weekday_6": "zaterdag",
+  "month_0": "jan",
+  "month_1": "feb",
+  "month_2": "mrt",
+  "month_3": "apr",
+  "month_4": "mei",
+  "month_5": "jun",
+  "month_6": "jul",
+  "month_7": "aug",
+  "month_8": "sep",
+  "month_9": "okt",
+  "month_10": "nov",
+  "month_11": "dec"
 }
