Checkout extension: add 'Require date selection' setting to block checkout progress until a date is selected; update localization for date selection prompt.

--- a/extensions/date-picker/locales/en.json
+++ b/extensions/date-picker/locales/en.json
@@ -45,5 +45,6 @@
 	"month_8": "Sep",
 	"month_9": "Oct",
 	"month_10": "Nov",
-	"month_11": "Dec"
+	"month_11": "Dec",
+	"select_date_required": "Please select a delivery date to continue."
 }
